edit icon on all pages

--- a/form-input-groups.html
+++ b/form-input-groups.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0">
 <title>Hotel - Form Input Groups</title>
 
-<link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.png">
+<link rel="shortcut icon" type="image/x-icon" href="assets/img/logo.jpeg">
 
 <link rel="stylesheet" href="assets/css/bootstrap.min.css">
 
@@ -26,7 +26,7 @@
 <div class="header-left">
 <a href="index.html" class="logo">
 <img src="assets/img/hotel_logo.png" width="50" height="70" alt="logo">
-<span class="logoclass">HOTEL</span>
+<span class="logoclass">E-Maynawa</span>
 </a>
 <a href="index.html" class="logo logo-small">
 <img src="assets/img/hotel_logo.png" alt="Logo" width="30" height="30">
