--- a/form-vertical.html
+++ b/form-vertical.html
@@ -28,7 +28,7 @@
 <div class="header-left">
 <a href="index.html" class="logo">
 <img src="assets/img/hotel_logo.png" width="50" height="70" alt="logo">
-<span class="logoclass">HOTEL</span>
+<span class="logoclass">E-Maynawa Sentosa</span>
 </a>
 <a href="index.html" class="logo logo-small">
 <img src="assets/img/hotel_logo.png" alt="Logo" width="30" height="30">
