--- a/register.html
+++ b/register.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0">
 	<title>Hotel Dashboard Template</title>
-	<link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.png">
+	<link rel="shortcut icon" type="image/x-icon" href="assets/img/logo.jpeg">
 	<link rel="stylesheet" href="assets/css/bootstrap.min.css">
 	<link rel="stylesheet" href="assets/plugins/fontawesome/css/all.min.css">
 	<link rel="stylesheet" href="assets/plugins/fontawesome/css/fontawesome.min.css">
@@ -18,7 +18,7 @@
 		<div class="login-wrapper">
 			<div class="container">
 				<div class="loginbox">
-					<div class="login-left"> <img class="img-fluid" src="assets/img/logo.png" alt="Logo"> </div>
+					<div class="login-left"> <img class="img-fluid" src="assets/img/logo.jpeg" alt="Logo"> </div>
 					<div class="login-right">
 						<div class="login-right-wrap">
 							<h1 class="mb-3">Register</h1>
