--- a/form-basic-inputs.html
+++ b/form-basic-inputs.html
@@ -55,77 +55,48 @@
 <a href="javascript:void(0)" class="clear-noti"> Clear All </a>
 </div>
 <div class="noti-content">
-<ul class="notification-list">
-<li class="notification-message">
-<a href="#">
-<div class="media">
-<span class="avatar avatar-sm">
-<img class="avatar-img rounded-circle" alt="User Image" src="assets/img/profile.jpeg">
-</span>
-<div class="media-body">
-<p class="noti-details"><span class="noti-title">Carlson Tech</span> has
-approved <span class="noti-title">your estimate</span></p>
-<p class="noti-time"><span class="notification-time">4 mins ago</span>
-</p>
+    <ul class="notification-list">
+        <li class="notification-message">
+            <a href="#">
+                <div class="media"> <span class="avatar avatar-sm">
+                    <img class="avatar-img rounded-circle" alt="User Image" src="assets/img/profile.jpeg">
+                    </span>
+                    <div class="media-body">
+                        <p class="noti-details"><span class="noti-title">Pengajuan baru untuk desa Bente </span> telah diapprove.</p>
+                        <p class="noti-time"><span class="notification-time">4 menit yang lalu</span> </p>
+                    </div>
+                </div>
+            </a>
+        </li>
+        <li class="notification-message">
+            <a href="#">
+                <div class="media"> <span class="avatar avatar-sm">
+                    <img class="avatar-img rounded-circle" alt="User Image" src="assets/img/profile.jpeg">
+                    </span>
+                    <div class="media-body">
+                        <p class="noti-details"><span class="noti-title">Pengajuan baru untuk desa Ambuan Baru </span> dipending.</p>
+                        <p class="noti-time"><span class="notification-time">2 hari yang lalu</span> </p>
+                    </div>
+                </div>
+            </a>
+        </li>
+        <li class="notification-message">
+            <a href="#">
+                <div class="media"> <span class="avatar avatar-sm">
+                    <img class="avatar-img rounded-circle" alt="User Image" src="assets/img/profile.jpeg">
+                    </span>
+                    <div class="media-body">
+                        <p class="noti-details"><span class="noti-title">Pengajuan baru untuk desa Wasambaa </span> dipending.</p>
+                        <p class="noti-time"><span class="notification-time">3 hari yang lalu</span> </p>
+                    </div>
+                </div>
+            </a>
+        </li>
+    </ul>
 </div>
-</div>
-</a>
-</li>
-<li class="notification-message">
-<a href="#">
-<div class="media">
-<span class="avatar avatar-sm">
-<img class="avatar-img rounded-circle" alt="User Image" src="assets/img/profile.jpeg">
-</span>
-<div class="media-body">
-<p class="noti-details"><span class="noti-title">International Software
-Inc</span> has sent you a invoice in the amount of <span class="noti-title">$218</span></p>
-<p class="noti-time"><span class="notification-time">6 mins ago</span>
-</p>
-</div>
-</div>
-</a>
-</li>
-<li class="notification-message">
-<a href="#">
-<div class="media">
-<span class="avatar avatar-sm">
-<img class="avatar-img rounded-circle" alt="User Image" src="assets/img/profile.jpeg">
-</span>
-<div class="media-body">
-<p class="noti-details"><span class="noti-title">John Hendry</span> sent
-a cancellation request <span class="noti-title">Apple iPhone
- XR</span></p>
-<p class="noti-time"><span class="notification-time">8 mins ago</span>
-</p>
-</div>
-</div>
-</a>
-</li>
-<li class="notification-message">
-<a href="#">
-<div class="media">
-<span class="avatar avatar-sm">
-<img class="avatar-img rounded-circle" alt="User Image" src="assets/img/profile.jpeg">
-</span>
-<div class="media-body">
-<p class="noti-details"><span class="noti-title">Mercury Software
-Inc</span> added a new product <span class="noti-title">Apple
-MacBook Pro</span></p>
-<p class="noti-time"><span class="notification-time">12 mins ago</span>
-</p>
-</div>
-</div>
-</a>
-</li>
-</ul>
-</div>
-<div class="topnav-dropdown-footer">
-<a href="#">View all Notifications</a>
-</div>
+<div class="topnav-dropdown-footer"> <a href="#">View all Notifications</a> </div>
 </div>
 </li>
-
 
 <li class="nav-item dropdown has-arrow">
 <a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown">
