--- a/edit-profile.html
+++ b/edit-profile.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0">
 <title>E-Maynawa Sentosa</title>
 
-<link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.png">
+<link rel="shortcut icon" type="image/x-icon" href="assets/img/logo.jpeg">
 
 <link rel="stylesheet" href="assets/css/bootstrap.min.css">
 
@@ -26,12 +26,12 @@
 <div class="header">
 
 <div class="header-left">
-<a href="index.html" class="logo">
-<img src="assets/img/hotel_logo.png" width="50" height="70" alt="logo">
-<span class="logoclass">HOTEL</span>
+<a href="home.html" class="logo">
+<img src="assets/img/logo.jpeg" width="50" height="70" alt="logo">
+<span class="logoclass">E-Maynawa</span>
 </a>
-<a href="index.html" class="logo logo-small">
-<img src="assets/img/hotel_logo.png" alt="Logo" width="30" height="30">
+<a href="home.html" class="logo logo-small">
+<img src="assets/img/logo.jpeg" alt="Logo" width="30" height="30">
 </a>
 </div>
 
@@ -56,70 +56,44 @@
 <a href="javascript:void(0)" class="clear-noti"> Clear All </a>
 </div>
 <div class="noti-content">
-<ul class="notification-list">
-<li class="notification-message">
-<a href="#">
-<div class="media">
-<span class="avatar avatar-sm">
-<img class="avatar-img rounded-circle" alt="User Image" src="assets/img/profiles/avatar-02.jpg">
-</span>
-<div class="media-body">
-<p class="noti-details"><span class="noti-title">Carlson Tech</span> has
-approved <span class="noti-title">your estimate</span></p>
-<p class="noti-time"><span class="notification-time">4 mins ago</span>
-</p>
-</div>
-</div>
-</a>
-</li>
-<li class="notification-message">
-<a href="#">
-<div class="media">
-<span class="avatar avatar-sm">
-<img class="avatar-img rounded-circle" alt="User Image" src="assets/img/profiles/avatar-11.jpg">
-</span>
-<div class="media-body">
-<p class="noti-details"><span class="noti-title">International Software
-Inc</span> has sent you a invoice in the amount of <span class="noti-title">$218</span></p>
-<p class="noti-time"><span class="notification-time">6 mins ago</span>
-</p>
-</div>
-</div>
-</a>
-</li>
-<li class="notification-message">
-<a href="#">
-<div class="media">
-<span class="avatar avatar-sm">
-<img class="avatar-img rounded-circle" alt="User Image" src="assets/img/profiles/avatar-17.jpg">
-</span>
-<div class="media-body">
-<p class="noti-details"><span class="noti-title">John Hendry</span> sent
-a cancellation request <span class="noti-title">Apple iPhone
-XR</span></p>
-<p class="noti-time"><span class="notification-time">8 mins ago</span>
-</p>
-</div>
-</div>
-</a>
-</li>
-<li class="notification-message">
-<a href="#">
-<div class="media">
-<span class="avatar avatar-sm">
-<img class="avatar-img rounded-circle" alt="User Image" src="assets/img/profile.jpeg">
-</span>
-<div class="media-body">
-<p class="noti-details"><span class="noti-title">Mercury Software
-Inc</span> added a new product <span class="noti-title">Apple
-MacBook Pro</span></p>
-<p class="noti-time"><span class="notification-time">12 mins ago</span>
-</p>
-</div>
-</div>
-</a>
-</li>
-</ul>
+	<ul class="notification-list">
+		<li class="notification-message">
+			<a href="#">
+				<div class="media"> <span class="avatar avatar-sm">
+					<img class="avatar-img rounded-circle" alt="User Image" src="assets/img/profile.jpeg">
+					</span>
+					<div class="media-body">
+						<p class="noti-details"><span class="noti-title">Pengajuan baru untuk desa Bente </span> telah diapprove.</p>
+						<p class="noti-time"><span class="notification-time">4 menit yang lalu</span> </p>
+					</div>
+				</div>
+			</a>
+		</li>
+		<li class="notification-message">
+			<a href="#">
+				<div class="media"> <span class="avatar avatar-sm">
+					<img class="avatar-img rounded-circle" alt="User Image" src="assets/img/profile.jpeg">
+					</span>
+					<div class="media-body">
+						<p class="noti-details"><span class="noti-title">Pengajuan baru untuk desa Ambuan Indah </span> dipending.</p>
+						<p class="noti-time"><span class="notification-time">2 hari yang lalu</span> </p>
+					</div>
+				</div>
+			</a>
+		</li>
+		<li class="notification-message">
+			<a href="#">
+				<div class="media"> <span class="avatar avatar-sm">
+					<img class="avatar-img rounded-circle" alt="User Image" src="assets/img/profile.jpeg">
+					</span>
+					<div class="media-body">
+						<p class="noti-details"><span class="noti-title">Pengajuan baru untuk desa Wasambaa </span> dipending.</p>
+						<p class="noti-time"><span class="notification-time">3 hari yang lalu</span> </p>
+					</div>
+				</div>
+			</a>
+		</li>
+	</ul>
 </div>
 <div class="topnav-dropdown-footer">
 <a href="#">View all Notifications</a>
@@ -143,8 +117,7 @@ MacBook Pro</span></p>
 </div>
 </div>
 <a class="dropdown-item" href="profile.html">My Profile</a>
-<a class="dropdown-item" href="settings.html">Account Settings</a>
-<a class="dropdown-item" href="login.html">Logout</a>
+<a class="dropdown-item" href="index.html">Logout</a>
 </div>
 </li>
 
@@ -157,7 +130,7 @@ MacBook Pro</span></p>
 	<div class="sidebar-inner slimscroll">
 		<div id="sidebar-menu" class="sidebar-menu">
 			<ul>
-				<li class="active"> <a href="index.html"><i class="fas fa-tachometer-alt"></i> <span>Dashboard</span></a> </li>
+				<li class="active"> <a href="home.html"><i class="fas fa-tachometer-alt"></i> <span>Dashboard</span></a> </li>
 				<li class="list-divider"></li>
 				<li class="submenu"> <a href="localization.html"><i class="fas fa-location-arrow"></i> <span> Lokasi </span> <span class="menu-arrow"></span></a>
 					<ul class="submenu_class" style="display: none;">
