--- a/form-basic-inputs.html
+++ b/form-basic-inputs.html
@@ -25,11 +25,11 @@
 <div class="header">
 
 <div class="header-left">
-<a href="index.html" class="logo">
+<a href="home.html" class="logo">
 <img src="assets/img/logo.jpeg" width="50" height="70" alt="logo">
 <span class="logoclass">E-Maynawa Sentosa</span>
 </a>
-<a href="index.html" class="logo logo-small">
+<a href="home.html" class="logo logo-small">
 <img src="assets/img/logo.jpeg" alt="Logo" width="30" height="30">
 </a>
 </div>
@@ -74,7 +74,7 @@
                     <img class="avatar-img rounded-circle" alt="User Image" src="assets/img/profile.jpeg">
                     </span>
                     <div class="media-body">
-                        <p class="noti-details"><span class="noti-title">Pengajuan baru untuk desa Ambuan Baru </span> dipending.</p>
+                        <p class="noti-details"><span class="noti-title">Pengajuan baru untuk desa Ambuan Indah </span> dipending.</p>
                         <p class="noti-time"><span class="notification-time">2 hari yang lalu</span> </p>
                     </div>
                 </div>
@@ -113,7 +113,7 @@
 </div>
 </div>
 <a class="dropdown-item" href="profile.html">My Profile</a>
-<a class="dropdown-item" href="login.html">Logout</a>
+<a class="dropdown-item" href="index.html">Logout</a>
 </div>
 </li>
 
@@ -127,7 +127,7 @@
 <div id="sidebar-menu" class="sidebar-menu">
 <ul>
 <li>
-<a href="index.html"><i class="fas fa-tachometer-alt"></i> <span>Dashboard</span></a>
+<a href="home.html"><i class="fas fa-tachometer-alt"></i> <span>Dashboard</span></a>
 </li>
 <li class="list-divider"></li>
 <li class="submenu"> <a href="localization.html"><i class="fas fa-location-arrow"></i> <span> Lokasi </span> <span class="menu-arrow"></span></a>
