--- a/forgot-password.html
+++ b/forgot-password.html
@@ -21,14 +21,14 @@
 						<div class="login-right-wrap">
 							<h1>Forgot Password?</h1>
 							<p class="account-subtitle">Enter your email to get a password reset link</p>
-							<form action="login.html">
+							<form action="index.html">
 								<div class="form-group">
 									<input class="form-control" type="text" placeholder="Email"> </div>
 								<div class="form-group mb-0">
 									<button class="btn btn-primary btn-block" type="submit">Reset Password</button>
 								</div>
 							</form>
-							<div class="text-center dont-have">Remember your password? <a href="login.html">Login</a></div>
+							<div class="text-center dont-have">Remember your password? <a href="index.html">Login</a></div>
 						</div>
 					</div>
 				</div>
