--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -8,293 +8,44 @@
 	<link rel="shortcut icon" type="image/x-icon" href="assets/img/logo.jpeg">
 	<link rel="stylesheet" href="assets/css/bootstrap.min.css">
 	<link rel="stylesheet" href="assets/plugins/fontawesome/css/fontawesome.min.css">
-	<link rel="stylesheet" href="assets/plugins/fontawesome/css/all.min.css">
+	<link rel="stylesheet" type="text/css" href="assets/plugins/fontawesome/css/all.min.css">
 	<link rel="stylesheet" href="assets/css/feathericon.min.css">
-	<link rel="stylehseet" href="https://cdn.oesmith.co.uk/morris-0.5.1.css">
 	<link rel="stylesheet" href="assets/plugins/morris/morris.css">
 	<link rel="stylesheet" href="assets/css/style.css"> </head>
 
 <body>
-	<div class="main-wrapper">
-		<div class="header">
-			<div class="header-left">
-				<a href="index.html" class="logo"> <img src="assets/img/logo.jpeg" width="50" height="70" alt="logo"> <span class="logoclass">E-Maynawa Sentosa</span> </a>
-				<a href="index.html" class="logo logo-small"> <img src="assets/img/logo.jpeg" alt="Logo" width="30" height="30"> </a>
-			</div>
-			<a href="javascript:void(0);" id="toggle_btn"> <i class="fe fe-text-align-left"></i> </a>
-			<a class="mobile_btn" id="mobile_btn"> <i class="fas fa-bars"></i> </a>
-			<ul class="nav user-menu">
-				<li class="nav-item dropdown noti-dropdown">
-					<a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown"> <i class="fe fe-bell"></i> <span class="badge badge-pill">3</span> </a>
-					<div class="dropdown-menu notifications">
-						<div class="topnav-dropdown-header"> <span class="notification-title">Notifications</span> <a href="javascript:void(0)" class="clear-noti"> Clear All </a> </div>
-						<div class="noti-content">
-							<ul class="notification-list">
-								<li class="notification-message">
-									<a href="#">
-										<div class="media"> <span class="avatar avatar-sm">
-											<img class="avatar-img rounded-circle" alt="User Image" src="assets/img/profile.jpeg">
-											</span>
-											<div class="media-body">
-												<p class="noti-details"><span class="noti-title">Pengajuan baru untuk desa Bente </span> telah diapprove.</p>
-												<p class="noti-time"><span class="notification-time">4 menit yang lalu</span> </p>
-											</div>
-										</div>
-									</a>
-								</li>
-								<li class="notification-message">
-									<a href="#">
-										<div class="media"> <span class="avatar avatar-sm">
-											<img class="avatar-img rounded-circle" alt="User Image" src="assets/img/profile.jpeg">
-											</span>
-											<div class="media-body">
-												<p class="noti-details"><span class="noti-title">Pengajuan baru untuk desa Ambuan Baru </span> dipending.</p>
-												<p class="noti-time"><span class="notification-time">2 hari yang lalu</span> </p>
-											</div>
-										</div>
-									</a>
-								</li>
-								<li class="notification-message">
-									<a href="#">
-										<div class="media"> <span class="avatar avatar-sm">
-											<img class="avatar-img rounded-circle" alt="User Image" src="assets/img/profile.jpeg">
-											</span>
-											<div class="media-body">
-												<p class="noti-details"><span class="noti-title">Pengajuan baru untuk desa Wasambaa </span> dipending.</p>
-												<p class="noti-time"><span class="notification-time">3 hari yang lalu</span> </p>
-											</div>
-										</div>
-									</a>
-								</li>
-							</ul>
-						</div>
-						<div class="topnav-dropdown-footer"> <a href="#">View all Notifications</a> </div>
-					</div>
-				</li>
-				<li class="nav-item dropdown has-arrow">
-					<a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown"> <span class="user-img"><img class="rounded-circle" src="assets/img/profile.jpeg" width="31" alt="Soeng Souy"></span> </a>
-					<div class="dropdown-menu">
-						<div class="user-header">
-							<div class="avatar avatar-sm"> <img src="assets/img/profile.jpeg" alt="User Image" class="avatar-img rounded-circle"> </div>
-							<div class="user-text">
-								<h6>Makmur, S.E.</h6>
-								<p class="text-muted mb-0">Administrator</p>
-							</div>
-						</div> <a class="dropdown-item" href="profile.html">My Profile</a>
-						<a class="dropdown-item" href="login.html">Logout</a> </div>
-				</li>
-			</ul>
-			<div class="top-nav-search">
-				<form>
-					<input type="text" class="form-control" placeholder="Search here">
-					<button class="btn" type="submit"><i class="fas fa-search"></i></button>
-				</form>
-			</div>
-		</div>
-		<div class="sidebar" id="sidebar">
-			<div class="sidebar-inner slimscroll">
-				<div id="sidebar-menu" class="sidebar-menu">
-					<ul>
-						<li class="active"> <a href="index.html"><i class="fas fa-tachometer-alt"></i> <span>Dashboard</span></a> </li>
-						<li class="list-divider"></li>
-						<li class="submenu"> <a href="localization.html"><i class="fas fa-location-arrow"></i> <span> Lokasi </span> <span class="menu-arrow"></span></a>
-							<ul class="submenu_class" style="display: none;">
-								<li><a href="all-receive-lasalimu.html"> Kecamatan Lasalimu</a></li>
-								<li><a href="all-receive-lasalimu-sektor.html"> Kecamatan Lasalimu Sektor</a></li>
-							</ul>
-						</li>
-						<li><a href="form-basic-inputs.html"><i class="fas fa-file-archive"></i> <span> Dokumen Penunjang </span> <span class="menu-arrow"></span></a>
-						</li>
-					</ul>
-				</div>
-			</div>
-		</div>
-		<div class="page-wrapper">
-			<div class="content container-fluid">
-				<div class="page-header">
-					<div class="row">
-						<div class="col-sm-12 mt-5">
-							<h3 class="page-title mt-3">Sistem Pelayanan Terintegrasi Dokumen Pengawasan (E-MAYNAWA SENTOSA)</h3>
-							<ul class="breadcrumb">
-								<li class="breadcrumb-item active">Kecamatan Lasalimu</li>
-							</ul>
-						</div>
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-xl-3 col-sm-6 col-12">
-						<div class="card board1 fill">
-							<div class="card-body">
-								<div class="dash-widget-header">
-									<div>
-										<h3 class="card_widget_header">236</h3>
-										<h4 class="text-muted">Total Aktivitas</h4> </div>
-									<div class="ml-auto mt-md-3 mt-lg-0"> <span class="opacity-7 text-muted"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewbox="0 0 24 24" fill="none" stroke="#009688" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-globe">
-										<circle cx="12" cy="12" r="10"></circle>
-										<line x1="2" y1="12" x2="22" y2="12"></line>
-										<path d="M12 2a15.3 15.3 0 0 1 4 10 15.3 15.3 0 0 1-4 10 15.3 15.3 0 0 1-4-10 15.3 15.3 0 0 1 4-10z">
-										</path>
-										</svg></span> </div>
+	<div class="main-wrapper login-body">
+		<div class="login-wrapper">
+			<div class="container">
+				<div class="loginbox bg-white">
+					<div class="login-left"> <img class="img-fluid" src="assets/img/logo.jpeg" alt="Logo"> </div>
+					<div class="login-right">
+						<div class="login-right-wrap">
+							<h1>Selamat Datang di </br>E-MAYNAWA SENTOSA</h1>
+							<p class="account-subtitle"></p>
+							<form action="home.html">
+								<div class="form-group">
+									<input class="form-control" type="text" placeholder="Email"> </div>
+								<div class="form-group">
+									<input class="form-control" type="text" placeholder="Password"> </div>
+								<div class="form-group">
+									<button class="btn btn-primary btn-block" type="submit">Login</button>
 								</div>
-							</div>
-						</div>
-					</div>
-					<div class="col-xl-3 col-sm-6 col-12">
-						<div class="card board1 fill">
-							<div class="card-body">
-								<div class="dash-widget-header">
-									<div>
-										<h3 class="card_widget_header">180</h3>
-										<h4 class="text-muted">Status Sukses</h4></div>
-									<div class="ml-auto mt-md-3 mt-lg-0"> <span class="opacity-7 text-muted"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewbox="0 0 24 24" fill="none" stroke="#009688" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-globe">
-										<circle cx="12" cy="12" r="10"></circle>
-										<line x1="2" y1="12" x2="22" y2="12"></line>
-										<path d="M12 2a15.3 15.3 0 0 1 4 10 15.3 15.3 0 0 1-4 10 15.3 15.3 0 0 1-4-10 15.3 15.3 0 0 1 4-10z">
-										</path>
-										</svg></span> </div>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="col-xl-3 col-sm-6 col-12">
-						<div class="card board1 fill">
-							<div class="card-body">
-								<div class="dash-widget-header">
-									<div>
-										<h3 class="card_widget_header">38</h3>
-										<h6 class="text-muted">Status Pending</h6> </div>
-									<div class="ml-auto mt-md-3 mt-lg-0"> <span class="opacity-7 text-muted"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewbox="0 0 24 24" fill="none" stroke="#009688" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-globe">
-										<circle cx="12" cy="12" r="10"></circle>
-										<line x1="2" y1="12" x2="22" y2="12"></line>
-										<path d="M12 2a15.3 15.3 0 0 1 4 10 15.3 15.3 0 0 1-4 10 15.3 15.3 0 0 1-4-10 15.3 15.3 0 0 1 4-10z">
-										</path>
-										</svg></span> </div>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="col-xl-3 col-sm-6 col-12">
-						<div class="card board1 fill">
-							<div class="card-body">
-								<div class="dash-widget-header">
-									<div>
-										<h3 class="card_widget_header">18</h3>
-										<h6 class="text-muted">Status Gagal</h6> </div>
-									<div class="ml-auto mt-md-3 mt-lg-0"> <span class="opacity-7 text-muted"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewbox="0 0 24 24" fill="none" stroke="#009688" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-globe">
-									<circle cx="12" cy="12" r="10"></circle>
-									<line x1="2" y1="12" x2="22" y2="12"></line>
-									<path d="M12 2a15.3 15.3 0 0 1 4 10 15.3 15.3 0 0 1-4 10 15.3 15.3 0 0 1-4-10 15.3 15.3 0 0 1 4-10z">
-									</path>
-									</svg></span> </div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-md-12 col-lg-6">
-						<div class="card card-chart">
-							<div class="card-header">
-								<h4 class="card-title">PENGUNJUNG</h4> </div>
-							<div class="card-body">
-								<div id="line-chart"></div>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-12 col-lg-6">
-						<div class="card card-chart">
-							<div class="card-header">
-								<h4 class="card-title">Aktivitas</h4> </div>
-							<div class="card-body">
-								<div id="donut-chart"></div>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-md-12 d-flex">
-						<div class="card card-table flex-fill">
-							<div class="card-header">
-								<h4 class="card-title float-left mt-2">Pengajuan</h4>
-								<button type="button" class="btn btn-primary float-right veiwbutton">View All</button>
-							</div>
-							<div class="card-body">
-								<div class="table-responsive">
-									<table class="table table-hover table-center">
-										<thead>
-											<tr>
-												<th>Nomor Pengajuan</th>
-												<th>Nama</th>
-												<th>Desa</th>
-												<th>Kode Desa</th>
-												<th>Status</th>
-											</tr>
-										</thead>
-										<tbody>
-											<tr>
-												<td class="text-nowrap">
-													<div>0001</div>
-												</td>
-												<td class="text-nowrap">Yusuf Ahmad</td>
-												<td>Desa Wasambaa</td>
-												<td>74.04.23.2012</td>
-												<td class="text-left">Sukses</td>
-											</tr>
-											<tr>
-												<td class="text-nowrap">
-													<div>0001</div>
-												</td>
-												<td class="text-nowrap">Adi Nugroho</td>
-												<td>Desa Wasambaa</td>
-												<td>74.04.23.2012</td>
-												<td class="text-left">Sukses</td>
-											</tr>
-											<tr>
-												<tr>
-													<td class="text-nowrap">
-														<div>0001</div>
-													</td>
-													<td class="text-nowrap">Abdul Jabar</td>
-													<td>Desa Bente</td>
-													<td>74.04.23.2012</td>
-													<td class="text-left">Sukses</td>
-												</tr>
-												<tr>
-													<td class="text-nowrap">
-														<div>0001</div>
-													</td>
-													<td class="text-nowrap">Endah Kurnia</td>
-													<td>Desa Tegal Baru</td>
-													<td>74.04.23.2012</td>
-													<td class="text-left">Sukses</td>
-												</tr>
-											<tr>
-												<td class="text-nowrap">
-													<div>0001</div>
-												</td>
-												<td class="text-nowrap">Ihsan Ari Wibowo</td>
-												<td>Desa Ambuan Indah</td>
-												<td>74.04.23.2012</td>
-												<td class="text-left">Gagal</td>
-											</tr>
-										</tbody>
-									</table>
-								</div>
-							</div>
+							</form>
+							<div class="text-center forgotpass"><a href="forgot-password.html">Forgot Password?</a> </div>
+							<div class="login-or"> <span class="or-line"></span> <span class="span-or">or</span> </div>
+							<div class="social-login"> <span>Login with</span> <a href="#" class="facebook"><i class="fab fa-facebook-f"></i></a><a href="#" class="google"><i class="fab fa-google"></i></a> </div>
+							<div class="text-center dont-have">Don’t have an account? <a href="register.html">Register</a></div>
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
 	</div>
-	<script data-cfasync="false" src="../../../cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
 	<script src="assets/js/jquery-3.5.1.min.js"></script>
 	<script src="assets/js/popper.min.js"></script>
 	<script src="assets/js/bootstrap.min.js"></script>
 	<script src="assets/plugins/slimscroll/jquery.slimscroll.min.js"></script>
-	<script src="assets/plugins/raphael/raphael.min.js"></script>
-	<script src="assets/plugins/morris/morris.min.js"></script>
-	<script src="assets/js/chart.morris.js"></script>
 	<script src="assets/js/script.js"></script>
 </body>
 
