--- a/profile.html
+++ b/profile.html
@@ -18,8 +18,8 @@
 	<div class="main-wrapper">
 		<div class="header">
 			<div class="header-left">
-				<a href="index.html" class="logo"> <img src="assets/img/hotel_logo.png" width="50" height="70" alt="logo"> <span class="logoclass">E-Maynawa Sentosa</span> </a>
-				<a href="index.html" class="logo logo-small"> <img src="assets/img/hotel_logo.png" alt="Logo" width="30" height="30"> </a>
+				<a href="home.html" class="logo"> <img src="assets/img/logo.jpeg" width="50" height="70" alt="logo"> <span class="logoclass">E-Maynawa Sentosa</span> </a>
+				<a href="home.html" class="logo logo-small"> <img src="assets/img/logo.jpeg" alt="Logo" width="30" height="30"> </a>
 			</div>
 			<a href="javascript:void(0);" id="toggle_btn"> <i class="fe fe-text-align-left"></i> </a>
 			<a class="mobile_btn" id="mobile_btn"> <i class="fas fa-bars"></i> </a>
@@ -48,7 +48,7 @@
 											<img class="avatar-img rounded-circle" alt="User Image" src="assets/img/profile.jpeg">
 											</span>
 											<div class="media-body">
-												<p class="noti-details"><span class="noti-title">Pengajuan baru untuk desa Ambuan Baru </span> dipending.</p>
+												<p class="noti-details"><span class="noti-title">Pengajuan baru untuk desa Ambuan Indah </span> dipending.</p>
 												<p class="noti-time"><span class="notification-time">2 hari yang lalu</span> </p>
 											</div>
 										</div>
@@ -80,7 +80,7 @@
 								<h6>Makmur, S.E.</h6>
 								<p class="text-muted mb-0">Administrator</p>
 							</div>
-						</div> <a class="dropdown-item" href="profile.html">My Profile</a> <a class="dropdown-item" href="login.html">Logout</a> </div>
+						</div> <a class="dropdown-item" href="profile.html">My Profile</a> <a class="dropdown-item" href="index.html">Logout</a> </div>
 				</li>
 			</ul>
 		</div>
@@ -88,7 +88,7 @@
 			<div class="sidebar-inner slimscroll">
 				<div id="sidebar-menu" class="sidebar-menu">
 					<ul>
-						<li><a href="index.html"><i class="fe fe-home"></i> <span>Back to Home</span></a></li>
+						<li><a href="home.html"><i class="fe fe-home"></i> <span>Back to Home</span></a></li>
 						<li class="list-divider"></li>
 						<li class="submenu"> <a href="localization.html"><i class="fas fa-location-arrow"></i> <span> Lokasi </span> <span class="menu-arrow"></span></a>
 							<ul class="submenu_class" style="display: none;">
@@ -109,7 +109,7 @@
 						<div class="col">
 							<h3 class="page-title">Profile</h3>
 							<ul class="breadcrumb">
-								<li class="breadcrumb-item"><a href="index.html">Dashboard</a></li>
+								<li class="breadcrumb-item"><a href="home.html">Dashboard</a></li>
 								<li class="breadcrumb-item active">Profile</li>
 							</ul>
 						</div>
