--- a/register.html
+++ b/register.html
@@ -22,7 +22,7 @@
 					<div class="login-right">
 						<div class="login-right-wrap">
 							<h1 class="mb-3">Register</h1>
-							<form action="login.html">
+							<form action="index.html">
 								<div class="form-group">
 									<input class="form-control" type="text" placeholder="Name"> </div>
 								<div class="form-group">
@@ -37,7 +37,7 @@
 							</form>
 							<div class="login-or"> <span class="or-line"></span> <span class="span-or">or</span> </div>
 							<div class="social-login"> <span>Register with</span> <a href="#" class="facebook"><i class="fab fa-facebook-f"></i></a><a href="#" class="google"><i class="fab fa-google"></i></a> </div>
-							<div class="text-center dont-have">Already have an account? <a href="login.html">Login</a> </div>
+							<div class="text-center dont-have">Already have an account? <a href="index.html">Login</a> </div>
 						</div>
 					</div>
 				</div>
