update and sync

--- a/edit-profile.html
+++ b/edit-profile.html
@@ -275,7 +275,7 @@
 </div>
 </div>
 </form>
-<button type="button" class="btn btn-primary buttonedit mt-3">Save</button>
+<a href="profile.html"><button type="button" class="btn btn-primary buttonedit mt-3">Save</button></a>
 </div>
 </div>
 
