update components and pages

--- a/all-receive-lasalimu-selatan.html
+++ b/all-receive-lasalimu-selatan.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0">
-	<title>E-Maynawa Sentosa </title>
+	<title>E-Maynawa Sentosa</title>
 	<link rel="shortcut icon" type="image/x-icon" href="assets/img/logo.png">
 	<link rel="stylesheet" href="assets/css/bootstrap.min.css">
 	<link rel="stylesheet" href="assets/plugins/fontawesome/css/all.min.css">
@@ -18,7 +18,7 @@
 	<div class="main-wrapper">
 		<div class="header">
 			<div class="header-left">
-				<a href="home.html" class="logo"> <img src="assets/img/logo.png" width="50" height="70" alt="logo"> <span class="logoclass">E-Maynawa</span> </a>
+				<a href="home.html" class="logo"> <img src="assets/img/logo.png" width="50" height="70" alt="logo"> <span class="logoclass">E-Maynawa Sentosa</span> </a>
 				<a href="home.html" class="logo logo-small"> <img src="assets/img/logo.png" alt="Logo" width="30" height="30"> </a>
 			</div>
 			<a href="javascript:void(0);" id="toggle_btn"> <i class="fe fe-text-align-left"></i> </a>
@@ -36,7 +36,7 @@
 											<img class="avatar-img rounded-circle" alt="User Image" src="assets/img/profile.jpeg">
 											</span>
 											<div class="media-body">
-												<p class="noti-details"><span class="noti-title">Pengajuan baru untuk desa Benteng </span> telah diapprove.</p>
+												<p class="noti-details"><span class="noti-title">Pengajuan baru untuk desa Bente </span> telah diapprove.</p>
 												<p class="noti-time"><span class="notification-time">4 menit yang lalu</span> </p>
 											</div>
 										</div>
@@ -48,7 +48,7 @@
 											<img class="avatar-img rounded-circle" alt="User Image" src="assets/img/profile.jpeg">
 											</span>
 											<div class="media-body">
-												<p class="noti-details"><span class="noti-title">Pengajuan baru untuk desa Ambuau Indah </span> dipending.</p>
+												<p class="noti-details"><span class="noti-title">Pengajuan baru untuk desa Ambuan Indah </span> dipending.</p>
 												<p class="noti-time"><span class="notification-time">2 hari yang lalu</span> </p>
 											</div>
 										</div>
@@ -72,7 +72,7 @@
 					</div>
 				</li>
 				<li class="nav-item dropdown has-arrow">
-					<a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown"> <span class="user-img"><img class="rounded-circle" src="assets/img/profile.jpeg" width="31" alt="Mamur, S.E."></span> </a>
+					<a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown"> <span class="user-img"><img class="rounded-circle" src="assets/img/profile.jpeg" width="31" alt="Soeng Souy"></span> </a>
 					<div class="dropdown-menu">
 						<div class="user-header">
 							<div class="avatar avatar-sm"> <img src="assets/img/profile.jpeg" alt="User Image" class="avatar-img rounded-circle"> </div>
@@ -108,8 +108,8 @@
 					<div class="row align-items-center">
 						<div class="col">
 							<div class="mt-5">
-								<h4 class="card-title float-left mt-2">Kecamatan Lasalimu</h4><br/><br/><br/>
-								<h5 class="card-title float-left mt-2">Desa Benteng</h5>
+								<h4 class="card-title float-left mt-2">Kecamatan Lasalimu Selatan</h4><br/><br/><br/>
+								<h5 class="card-title float-left mt-2">Desa Ambuau Indah</h5>
                             </div>
 						</div>
 					</div>
@@ -169,6 +169,32 @@
 														</div>
 													</td>
 												</tr>
+												<tr>
+													<td class="text-nowrap">
+														<div>0004</div>
+													</td>
+													<td class="text-nowrap">Endah Kurnia</td>
+													<td class="text-left">005/001</td>
+													<td class="text-left">Sukses</td>
+													<td class="text-right">
+														<div class="dropdown dropdown-action"> <a href="#" class="action-icon dropdown-toggle" data-toggle="dropdown" aria-expanded="false"><i class="fas fa-ellipsis-v ellipse_color"></i></a>
+															<div class="dropdown-menu dropdown-menu-right"><a class="dropdown-item" href="#" data-toggle="modal" data-target="#delete_asset"><i class="fas fa-trash-alt m-r-5"></i> Delete</a> </div>
+														</div>
+													</td>
+												</tr>
+											<tr>
+												<td class="text-nowrap">
+													<div>0005</div>
+												</td>
+												<td class="text-nowrap">Ihsan Ari Wibowo</td>
+												<td class="text-left">003/001</td>
+												<td class="text-left">Gagal</td>
+												<td class="text-right">
+													<div class="dropdown dropdown-action"> <a href="#" class="action-icon dropdown-toggle" data-toggle="dropdown" aria-expanded="false"><i class="fas fa-ellipsis-v ellipse_color"></i></a>
+														<div class="dropdown-menu dropdown-menu-right"><a class="dropdown-item" href="#" data-toggle="modal" data-target="#delete_asset"><i class="fas fa-trash-alt m-r-5"></i> Delete</a> </div>
+													</div>
+												</td>
+											</tr>
 										</tbody>
 									</table>
 								</div>
@@ -181,7 +207,7 @@
 					<div class="row align-items-center">
 						<div class="col">
 							<div class="mt-5">
-								<h5 class="card-title float-left mt-2">Desa Bonelalo</h5>
+								<h5 class="card-title float-left mt-2">Desa Ambuau Togo</h5>
                             </div>
 						</div>
 					</div>
@@ -292,7 +318,7 @@
 					<div class="row align-items-center">
 						<div class="col">
 							<div class="mt-5">
-								<h5 class="card-title float-left mt-2">Desa Kakenauwe</h5>
+								<h5 class="card-title float-left mt-2">Desa Balimu</h5>
                             </div>
 						</div>
 					</div>
@@ -363,7 +389,7 @@
 					<div class="row align-items-center">
 						<div class="col">
 							<div class="mt-5">
-								<h5 class="card-title float-left mt-2">Desa Kamaru</h5>
+								<h5 class="card-title float-left mt-2">Desa Harapan Jaya</h5>
                             </div>
 						</div>
 					</div>
@@ -448,7 +474,7 @@
 					<div class="row align-items-center">
 						<div class="col">
 							<div class="mt-5">
-								<h5 class="card-title float-left mt-2">Desa Lasembangi</h5>
+								<h5 class="card-title float-left mt-2">Desa Kinapani Makmur</h5>
                             </div>
 						</div>
 					</div>
@@ -506,7 +532,7 @@
 					<div class="row align-items-center">
 						<div class="col">
 							<div class="mt-5">
-								<h5 class="card-title float-left mt-2">Desa Lawele</h5>
+								<h5 class="card-title float-left mt-2">Desa Lasalimu</h5>
                             </div>
 						</div>
 					</div>
@@ -630,7 +656,7 @@
 					<div class="row align-items-center">
 						<div class="col">
 							<div class="mt-5">
-								<h5 class="card-title float-left mt-2">Desa Nambo</h5>
+								<h5 class="card-title float-left mt-2">Desa Megabahari</h5>
                             </div>
 						</div>
 					</div>
@@ -675,7 +701,7 @@
 					<div class="row align-items-center">
 						<div class="col">
 							<div class="mt-5">
-								<h5 class="card-title float-left mt-2">Desa Sribatara</h5>
+								<h5 class="card-title float-left mt-2">Desa Moopano (Mopano)</h5>
                             </div>
 						</div>
 					</div>
@@ -734,7 +760,7 @@
 					<div class="row align-items-center">
 						<div class="col">
 							<div class="mt-5">
-								<h5 class="card-title float-left mt-2">Desa Suandala</h5>
+								<h5 class="card-title float-left mt-2">Desa Mulya Jaya (Mulia Jaya)</h5>
                             </div>
 						</div>
 					</div>
@@ -832,7 +858,7 @@
 					<div class="row align-items-center">
 						<div class="col">
 							<div class="mt-5">
-								<h5 class="card-title float-left mt-2">Desa Talaga Baru</h5>
+								<h5 class="card-title float-left mt-2">Desa Rejo Sari</h5>
                             </div>
 						</div>
 					</div>
@@ -904,105 +930,7 @@
 					<div class="row align-items-center">
 						<div class="col">
 							<div class="mt-5">
-								<h5 class="card-title float-left mt-2">Desa Togomangura (Togo Mangura)</h5>
-                            </div>
-						</div>
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-sm-12">
-						<div class="card card-table">
-							<div class="card-body booking_card">
-								<div class="table-responsive">
-									<table class="table table-hover table-center">
-										<thead>
-											<tr>
-												<th>Nomor Pengajuan</th>
-												<th>Nama</th>
-												<th>RT/RW</th>
-												<th>Status</th>
-											</tr>
-										</thead>
-										<tbody>
-											<tr>
-												<td class="text-nowrap">
-													<div>0001</div>
-												</td>
-												<td class="text-nowrap">Yusuf Ahmad</td>
-												<td class="text-left">002/012</td>
-												<td class="text-left">Sukses</td>
-												<td class="text-right">
-													<div class="dropdown dropdown-action"> <a href="#" class="action-icon dropdown-toggle" data-toggle="dropdown" aria-expanded="false"><i class="fas fa-ellipsis-v ellipse_color"></i></a>
-														<div class="dropdown-menu dropdown-menu-right"><a class="dropdown-item" href="#" data-toggle="modal" data-target="#delete_asset"><i class="fas fa-trash-alt m-r-5"></i> Delete</a> </div>
-													</div>
-												</td>
-											</tr>
-											<tr>
-												<td class="text-nowrap">
-													<div>0002</div>
-												</td>
-												<td class="text-nowrap">Adi Nugroho</td>
-												<td class="text-left">001/001</td>
-												<td class="text-left">Sukses</td>
-												<td class="text-right">
-													<div class="dropdown dropdown-action"> <a href="#" class="action-icon dropdown-toggle" data-toggle="dropdown" aria-expanded="false"><i class="fas fa-ellipsis-v ellipse_color"></i></a>
-														<div class="dropdown-menu dropdown-menu-right"><a class="dropdown-item" href="#" data-toggle="modal" data-target="#delete_asset"><i class="fas fa-trash-alt m-r-5"></i> Delete</a> </div>
-													</div>
-												</td>
-											</tr>
-											<tr>
-												<tr>
-													<td class="text-nowrap">
-														<div>0003</div>
-													</td>
-													<td class="text-nowrap">Abdul Jabar</td>
-													<td class="text-left">008/012</td>
-													<td class="text-left">Sukses</td>
-													<td class="text-right">
-														<div class="dropdown dropdown-action"> <a href="#" class="action-icon dropdown-toggle" data-toggle="dropdown" aria-expanded="false"><i class="fas fa-ellipsis-v ellipse_color"></i></a>
-															<div class="dropdown-menu dropdown-menu-right"><a class="dropdown-item" href="#" data-toggle="modal" data-target="#delete_asset"><i class="fas fa-trash-alt m-r-5"></i> Delete</a> </div>
-														</div>
-													</td>
-												</tr>
-												<tr>
-													<td class="text-nowrap">
-														<div>0004</div>
-													</td>
-													<td class="text-nowrap">Endah Kurnia</td>
-													<td class="text-left">005/001</td>
-													<td class="text-left">Sukses</td>
-													<td class="text-right">
-														<div class="dropdown dropdown-action"> <a href="#" class="action-icon dropdown-toggle" data-toggle="dropdown" aria-expanded="false"><i class="fas fa-ellipsis-v ellipse_color"></i></a>
-															<div class="dropdown-menu dropdown-menu-right"><a class="dropdown-item" href="#" data-toggle="modal" data-target="#delete_asset"><i class="fas fa-trash-alt m-r-5"></i> Delete</a> </div>
-														</div>
-													</td>
-												</tr>
-											<tr>
-												<td class="text-nowrap">
-													<div>0005</div>
-												</td>
-												<td class="text-nowrap">Ihsan Ari Wibowo</td>
-												<td class="text-left">003/001</td>
-												<td class="text-left">Gagal</td>
-												<td class="text-right">
-													<div class="dropdown dropdown-action"> <a href="#" class="action-icon dropdown-toggle" data-toggle="dropdown" aria-expanded="false"><i class="fas fa-ellipsis-v ellipse_color"></i></a>
-														<div class="dropdown-menu dropdown-menu-right"><a class="dropdown-item" href="#" data-toggle="modal" data-target="#delete_asset"><i class="fas fa-trash-alt m-r-5"></i> Delete</a> </div>
-													</div>
-												</td>
-											</tr>
-										</tbody>
-									</table>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-
-				<div class="page-header">
-					<div class="row align-items-center">
-						<div class="col">
-							<div class="mt-5">
-								<h5 class="card-title float-left mt-2">Desa Wagari</h5>
+								<h5 class="card-title float-left mt-2">Desa Sangia Arano</h5>
                             </div>
 						</div>
 					</div>
@@ -1100,7 +1028,52 @@
 					<div class="row align-items-center">
 						<div class="col">
 							<div class="mt-5">
-								<h5 class="card-title float-left mt-2">Desa Waoleona</h5>
+								<h5 class="card-title float-left mt-2">Siomanuru</h5>
+                            </div>
+						</div>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-sm-12">
+						<div class="card card-table">
+							<div class="card-body booking_card">
+								<div class="table-responsive">
+									<table class="table table-hover table-center">
+										<thead>
+											<tr>
+												<th>Nomor Pengajuan</th>
+												<th>Nama</th>
+												<th>RT/RW</th>
+												<th>Status</th>
+											</tr>
+										</thead>
+										<tbody>
+											<tr>
+												<td class="text-nowrap">
+													<div>0001</div>
+												</td>
+												<td class="text-nowrap">Yusuf Ahmad</td>
+												<td class="text-left">002/012</td>
+												<td class="text-left">Sukses</td>
+												<td class="text-right">
+													<div class="dropdown dropdown-action"> <a href="#" class="action-icon dropdown-toggle" data-toggle="dropdown" aria-expanded="false"><i class="fas fa-ellipsis-v ellipse_color"></i></a>
+														<div class="dropdown-menu dropdown-menu-right"><a class="dropdown-item" href="#" data-toggle="modal" data-target="#delete_asset"><i class="fas fa-trash-alt m-r-5"></i> Delete</a> </div>
+													</div>
+												</td>
+											</tr>
+										</tbody>
+									</table>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+
+				<div class="page-header">
+					<div class="row align-items-center">
+						<div class="col">
+							<div class="mt-5">
+								<h5 class="card-title float-left mt-2">Desa Siontapina (Siotapina)</h5>
                             </div>
 						</div>
 					</div>
@@ -1198,7 +1171,105 @@
 					<div class="row align-items-center">
 						<div class="col">
 							<div class="mt-5">
-								<h5 class="card-title float-left mt-2">Desa Wasambaa</h5>
+								<h5 class="card-title float-left mt-2">Desa Sumber Agung</h5>
+                            </div>
+						</div>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-sm-12">
+						<div class="card card-table">
+							<div class="card-body booking_card">
+								<div class="table-responsive">
+									<table class="table table-hover table-center">
+										<thead>
+											<tr>
+												<th>Nomor Pengajuan</th>
+												<th>Nama</th>
+												<th>RT/RW</th>
+												<th>Status</th>
+											</tr>
+										</thead>
+										<tbody>
+											<tr>
+												<td class="text-nowrap">
+													<div>0001</div>
+												</td>
+												<td class="text-nowrap">Yusuf Ahmad</td>
+												<td class="text-left">002/012</td>
+												<td class="text-left">Sukses</td>
+												<td class="text-right">
+													<div class="dropdown dropdown-action"> <a href="#" class="action-icon dropdown-toggle" data-toggle="dropdown" aria-expanded="false"><i class="fas fa-ellipsis-v ellipse_color"></i></a>
+														<div class="dropdown-menu dropdown-menu-right"><a class="dropdown-item" href="#" data-toggle="modal" data-target="#delete_asset"><i class="fas fa-trash-alt m-r-5"></i> Delete</a> </div>
+													</div>
+												</td>
+											</tr>
+											<tr>
+												<td class="text-nowrap">
+													<div>0002</div>
+												</td>
+												<td class="text-nowrap">Adi Nugroho</td>
+												<td class="text-left">001/001</td>
+												<td class="text-left">Sukses</td>
+												<td class="text-right">
+													<div class="dropdown dropdown-action"> <a href="#" class="action-icon dropdown-toggle" data-toggle="dropdown" aria-expanded="false"><i class="fas fa-ellipsis-v ellipse_color"></i></a>
+														<div class="dropdown-menu dropdown-menu-right"><a class="dropdown-item" href="#" data-toggle="modal" data-target="#delete_asset"><i class="fas fa-trash-alt m-r-5"></i> Delete</a> </div>
+													</div>
+												</td>
+											</tr>
+											<tr>
+												<tr>
+													<td class="text-nowrap">
+														<div>0003</div>
+													</td>
+													<td class="text-nowrap">Abdul Jabar</td>
+													<td class="text-left">008/012</td>
+													<td class="text-left">Sukses</td>
+													<td class="text-right">
+														<div class="dropdown dropdown-action"> <a href="#" class="action-icon dropdown-toggle" data-toggle="dropdown" aria-expanded="false"><i class="fas fa-ellipsis-v ellipse_color"></i></a>
+															<div class="dropdown-menu dropdown-menu-right"><a class="dropdown-item" href="#" data-toggle="modal" data-target="#delete_asset"><i class="fas fa-trash-alt m-r-5"></i> Delete</a> </div>
+														</div>
+													</td>
+												</tr>
+												<tr>
+													<td class="text-nowrap">
+														<div>0004</div>
+													</td>
+													<td class="text-nowrap">Endah Kurnia</td>
+													<td class="text-left">005/001</td>
+													<td class="text-left">Sukses</td>
+													<td class="text-right">
+														<div class="dropdown dropdown-action"> <a href="#" class="action-icon dropdown-toggle" data-toggle="dropdown" aria-expanded="false"><i class="fas fa-ellipsis-v ellipse_color"></i></a>
+															<div class="dropdown-menu dropdown-menu-right"><a class="dropdown-item" href="#" data-toggle="modal" data-target="#delete_asset"><i class="fas fa-trash-alt m-r-5"></i> Delete</a> </div>
+														</div>
+													</td>
+												</tr>
+											<tr>
+												<td class="text-nowrap">
+													<div>0005</div>
+												</td>
+												<td class="text-nowrap">Ihsan Ari Wibowo</td>
+												<td class="text-left">003/001</td>
+												<td class="text-left">Gagal</td>
+												<td class="text-right">
+													<div class="dropdown dropdown-action"> <a href="#" class="action-icon dropdown-toggle" data-toggle="dropdown" aria-expanded="false"><i class="fas fa-ellipsis-v ellipse_color"></i></a>
+														<div class="dropdown-menu dropdown-menu-right"><a class="dropdown-item" href="#" data-toggle="modal" data-target="#delete_asset"><i class="fas fa-trash-alt m-r-5"></i> Delete</a> </div>
+													</div>
+												</td>
+											</tr>
+										</tbody>
+									</table>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+
+				<div class="page-header">
+					<div class="row align-items-center">
+						<div class="col">
+							<div class="mt-5">
+								<h5 class="card-title float-left mt-2">Desa Umalaoge</h5>
                             </div>
 						</div>
 					</div>
@@ -1270,7 +1341,7 @@
 					<div class="row align-items-center">
 						<div class="col">
 							<div class="mt-5">
-								<h5 class="card-title float-left mt-2">Desa Wasuamba</h5>
+								<h5 class="card-title float-left mt-2">Desa Wajah Jaya (Wajahjaya)</h5>
                             </div>
 						</div>
 					</div>
