--- a/home.html
+++ b/home.html
@@ -4,8 +4,8 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0">
-	<title>E-Maynawa Sentosa</title>
-	<link rel="shortcut icon" type="image/x-icon" href="assets/img/logo.jpeg">
+	<title>E-Maynawa</title>
+	<link rel="shortcut icon" type="image/x-icon" href="assets/img/logo.png">
 	<link rel="stylesheet" href="assets/css/bootstrap.min.css">
 	<link rel="stylesheet" href="assets/plugins/fontawesome/css/fontawesome.min.css">
 	<link rel="stylesheet" href="assets/plugins/fontawesome/css/all.min.css">
@@ -18,8 +18,8 @@
 	<div class="main-wrapper">
 		<div class="header">
 			<div class="header-left">
-				<a href="home.html" class="logo"> <img src="assets/img/logo.jpeg" width="50" height="70" alt="logo"> <span class="logoclass">E-Maynawa Sentosa</span> </a>
-				<a href="home.html" class="logo logo-small"> <img src="assets/img/logo.jpeg" alt="Logo" width="30" height="30"> </a>
+				<a href="home.html" class="logo"> <img src="assets/img/logo.png" width="50" height="70" alt="logo"> <span class="logoclass">E-Maynawa</span> </a>
+				<a href="home.html" class="logo logo-small"> <img src="assets/img/logo.png" alt="Logo" width="30" height="30"> </a>
 			</div>
 			<a href="javascript:void(0);" id="toggle_btn"> <i class="fe fe-text-align-left"></i> </a>
 			<a class="mobile_btn" id="mobile_btn"> <i class="fas fa-bars"></i> </a>
@@ -100,10 +100,10 @@
 						<li class="submenu"> <a href="localization.html"><i class="fas fa-location-arrow"></i> <span> Lokasi </span> <span class="menu-arrow"></span></a>
 							<ul class="submenu_class" style="display: none;">
 								<li><a href="all-receive-lasalimu.html"> Kecamatan Lasalimu</a></li>
-								<li><a href="all-receive-lasalimu-sektor.html"> Kecamatan Lasalimu Sektor</a></li>
+								<li><a href="all-receive-lasalimu-selatan.html"> Kecamatan Lasalimu Selatan</a></li>
 							</ul>
 						</li>
-						<li><a href="form-basic-inputs.html"><i class="fas fa-file-archive"></i> <span> Dokumen Penunjang </span> <span class="menu-arrow"></span></a>
+						<li><a href="form-basic-inputs.html"><i class="fas fa-file-archive"></i> <span> Dokumen </br>Penunjang </span> <span class="menu-arrow"></span></a>
 						</li>
 					</ul>
 				</div>
@@ -114,10 +114,7 @@
 				<div class="page-header">
 					<div class="row">
 						<div class="col-sm-12 mt-5">
-							<h3 class="page-title mt-3">Sistem Pelayanan Terintegrasi Dokumen Pengawasan (E-MAYNAWA SENTOSA)</h3>
-							<ul class="breadcrumb">
-								<li class="breadcrumb-item active">Kecamatan Lasalimu</li>
-							</ul>
+							<h3 class="page-title mt-3">Sistem Pelayanan Terintegrasi Dokumen Pengawasan (E-MAYNAWA)</h3>
 						</div>
 					</div>
 				</div>
@@ -195,7 +192,7 @@
 					<div class="col-md-12 col-lg-6">
 						<div class="card card-chart">
 							<div class="card-header">
-								<h4 class="card-title">PENGUNJUNG</h4> </div>
+								<h4 class="card-title">PENGAJUAN</h4> </div>
 							<div class="card-body">
 								<div id="line-chart"></div>
 							</div>
@@ -242,39 +239,39 @@
 											</tr>
 											<tr>
 												<td class="text-nowrap">
-													<div>0001</div>
+													<div>0002</div>
 												</td>
 												<td class="text-nowrap">Adi Nugroho</td>
-												<td>Desa Wasambaa</td>
-												<td>74.04.23.2012</td>
+												<td>Desa Talaga Baru</td>
+												<td>74.04.23.2014</td>
 												<td class="text-left">Sukses</td>
 											</tr>
 											<tr>
 												<tr>
 													<td class="text-nowrap">
-														<div>0001</div>
+														<div>0003</div>
 													</td>
 													<td class="text-nowrap">Abdul Jabar</td>
-													<td>Desa Bente</td>
-													<td>74.04.23.2012</td>
+													<td>Desa Benteng</td>
+													<td>74.04.23.2013</td>
 													<td class="text-left">Sukses</td>
 												</tr>
 												<tr>
 													<td class="text-nowrap">
-														<div>0001</div>
+														<div>0004</div>
 													</td>
 													<td class="text-nowrap">Endah Kurnia</td>
-													<td>Desa Tegal Baru</td>
-													<td>74.04.23.2012</td>
+													<td>Desa Sribatara</td>
+													<td>74.04.23.2010</td>
 													<td class="text-left">Sukses</td>
 												</tr>
 											<tr>
 												<td class="text-nowrap">
-													<div>0001</div>
+													<div>0005</div>
 												</td>
 												<td class="text-nowrap">Ihsan Ari Wibowo</td>
-												<td>Desa Ambuan Indah</td>
-												<td>74.04.23.2012</td>
+												<td>Desa Bonelalo</td>
+												<td>74.04.23.2007</td>
 												<td class="text-left">Gagal</td>
 											</tr>
 										</tbody>
