--- a/profile.html
+++ b/profile.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0">
 	<title>E-Maynawa Sentosa</title>
-	<link rel="shortcut icon" type="image/x-icon" href="assets/img/logo.jpeg">
+	<link rel="shortcut icon" type="image/x-icon" href="assets/img/logo.png">
 	<link rel="stylesheet" href="assets/css/bootstrap.min.css">
 	<link rel="stylesheet" href="assets/plugins/fontawesome/css/all.min.css">
 	<link rel="stylesheet" href="assets/plugins/fontawesome/css/fontawesome.min.css">
@@ -18,8 +18,8 @@
 	<div class="main-wrapper">
 		<div class="header">
 			<div class="header-left">
-				<a href="home.html" class="logo"> <img src="assets/img/logo.jpeg" width="50" height="70" alt="logo"> <span class="logoclass">E-Maynawa Sentosa</span> </a>
-				<a href="home.html" class="logo logo-small"> <img src="assets/img/logo.jpeg" alt="Logo" width="30" height="30"> </a>
+				<a href="home.html" class="logo"> <img src="assets/img/logo.png" width="50" height="70" alt="logo"> <span class="logoclass">E-Maynawa Sentosa</span> </a>
+				<a href="home.html" class="logo logo-small"> <img src="assets/img/logo.png" alt="Logo" width="30" height="30"> </a>
 			</div>
 			<a href="javascript:void(0);" id="toggle_btn"> <i class="fe fe-text-align-left"></i> </a>
 			<a class="mobile_btn" id="mobile_btn"> <i class="fas fa-bars"></i> </a>
@@ -93,7 +93,7 @@
 						<li class="submenu"> <a href="localization.html"><i class="fas fa-location-arrow"></i> <span> Lokasi </span> <span class="menu-arrow"></span></a>
 							<ul class="submenu_class" style="display: none;">
 								<li><a href="all-receive-lasalimu.html"> Kecamatan Lasalimu</a></li>
-								<li><a href="all-receive-lasalimu-sektor.html"> Kecamatan Lasalimu Sektor</a></li>
+								<li><a href="all-receive-lasalimu-selatan.html"> Kecamatan Lasalimu Selatan</a></li>
 							</ul>
 						</li>
 						<li><a href="form-basic-inputs.html"><i class="fas fa-file-archive"></i> <span> Dokumen Penunjang </span> <span class="menu-arrow"></span></a>
@@ -146,10 +146,6 @@
 									<div class="col-lg-6">
 										<div class="card">
 											<div class="card-body">
-												<h5 class="card-title d-flex justify-content-between">
-													<span>Personal Details</span>
-													<a class="edit-link" data-toggle="modal" href="#edit_personal_details"><i class="fa fa-edit mr-1"></i>Edit</a>
-													</h5>
 												<div class="row mt-5">
 													<p class="col-sm-3 text-sm-right mb-0 mb-sm-3">Nama</p>
 													<p class="col-sm-9">Makmur, S.E.</p>
@@ -160,7 +156,7 @@
 												</div>
 												<div class="row">
 													<p class="col-sm-3 text-sm-right mb-0 mb-sm-3">Email</p>
-													<p class="col-sm-9">xxxxxxx@gmail.com</p>
+													<p class="col-sm-9">makmurinspektorat@gdriveme.id</p>
 												</div>
 												<div class="row">
 													<p class="col-sm-3 text-sm-right mb-0 mb-sm-3">No. HP</p>
