--- a/edit-profile.html
+++ b/edit-profile.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0">
 <title>E-Maynawa Sentosa</title>
 
-<link rel="shortcut icon" type="image/x-icon" href="assets/img/logo.jpeg">
+<link rel="shortcut icon" type="image/x-icon" href="assets/img/logo.png">
 
 <link rel="stylesheet" href="assets/css/bootstrap.min.css">
 
@@ -27,11 +27,11 @@
 
 <div class="header-left">
 <a href="home.html" class="logo">
-<img src="assets/img/logo.jpeg" width="50" height="70" alt="logo">
+<img src="assets/img/logo.png" width="50" height="70" alt="logo">
 <span class="logoclass">E-Maynawa</span>
 </a>
 <a href="home.html" class="logo logo-small">
-<img src="assets/img/logo.jpeg" alt="Logo" width="30" height="30">
+<img src="assets/img/logo.png" alt="Logo" width="30" height="30">
 </a>
 </div>
 
@@ -135,7 +135,7 @@
 				<li class="submenu"> <a href="localization.html"><i class="fas fa-location-arrow"></i> <span> Lokasi </span> <span class="menu-arrow"></span></a>
 					<ul class="submenu_class" style="display: none;">
 						<li><a href="all-receive-lasalimu.html"> Kecamatan Lasalimu</a></li>
-						<li><a href="all-receive-lasalimu-sektor.html"> Kecamatan Lasalimu Sektor</a></li>
+						<li><a href="all-receive-lasalimu-selatan.html"> Kecamatan Lasalimu Selatan</a></li>
 					</ul>
 				</li>
 				<li><a href="form-basic-inputs.html"><i class="fas fa-file-archive"></i> <span> Dokumen Penunjang </span> <span class="menu-arrow"></span></a>
