--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0">
 	<title>E-Maynawa Sentosa</title>
-	<link rel="shortcut icon" type="image/x-icon" href="assets/img/logo.jpeg">
+	<link rel="shortcut icon" type="image/x-icon" href="assets/img/logo.png">
 	<link rel="stylesheet" href="assets/css/bootstrap.min.css">
 	<link rel="stylesheet" href="assets/plugins/fontawesome/css/fontawesome.min.css">
 	<link rel="stylesheet" type="text/css" href="assets/plugins/fontawesome/css/all.min.css">
@@ -18,18 +18,22 @@
 		<div class="login-wrapper">
 			<div class="container">
 				<div class="loginbox bg-white">
-					<div class="login-left"> <img class="img-fluid" src="assets/img/logo.jpeg" alt="Logo"> </div>
+					<div class="login-left"> <img class="img-fluid" src="assets/img/logo.png" width="130" height="130" alt="Logo">
+					</br><p style="text-align: center; font-size: 20px; color:whitesmoke;">Sistem Pelayanan Terintegrasi Dokumen Pengawasan pada Inspektorat Daerah Baputarn Buton</p>
+					</div>
 					<div class="login-right">
 						<div class="login-right-wrap">
-							<h1>Selamat Datang di </br>E-MAYNAWA SENTOSA</h1>
+							<h1>Selamat Datang di </br>E-MAYNAWA</h1>
 							<p class="account-subtitle"></p>
-							<form action="home.html">
+							<form id="form">
 								<div class="form-group">
-									<input class="form-control" type="text" placeholder="Email"> </div>
+									<input class="form-control" type="text" placeholder="Email" id="email">
+								</div>
 								<div class="form-group">
-									<input class="form-control" type="text" placeholder="Password"> </div>
+									<input class="form-control" type="text" placeholder="Password" id="password"> 
+								</div>
 								<div class="form-group">
-									<button class="btn btn-primary btn-block" type="submit">Login</button>
+									<button class="btn btn-primary btn-block" type="submit" id="submit">Login</button>
 								</div>
 							</form>
 							<div class="text-center forgotpass"><a href="forgot-password.html">Forgot Password?</a> </div>
@@ -42,6 +46,7 @@
 			</div>
 		</div>
 	</div>
+	<script src="assets/js/index.js"></script>
 	<script src="assets/js/jquery-3.5.1.min.js"></script>
 	<script src="assets/js/popper.min.js"></script>
 	<script src="assets/js/bootstrap.min.js"></script>
