--- a/form-basic-inputs.html
+++ b/form-basic-inputs.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0">
-<title>E-Maynawa Sentosa</title>
+<title>E-Maynawa</title>
 
 <link rel="shortcut icon" type="image/x-icon" href="assets/img/logo.png">
 
@@ -27,7 +27,7 @@
 <div class="header-left">
 <a href="home.html" class="logo">
 <img src="assets/img/logo.png" width="50" height="70" alt="logo">
-<span class="logoclass">E-Maynawa Sentosa</span>
+<span class="logoclass">E-Maynawa</span>
 </a>
 <a href="home.html" class="logo logo-small">
 <img src="assets/img/logo.png" alt="Logo" width="30" height="30">
