--- a/profile.html
+++ b/profile.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0">
-	<title>E-Maynawa Sentosa</title>
+	<title>E-Maynawa</title>
 	<link rel="shortcut icon" type="image/x-icon" href="assets/img/logo.png">
 	<link rel="stylesheet" href="assets/css/bootstrap.min.css">
 	<link rel="stylesheet" href="assets/plugins/fontawesome/css/all.min.css">
@@ -18,7 +18,7 @@
 	<div class="main-wrapper">
 		<div class="header">
 			<div class="header-left">
-				<a href="home.html" class="logo"> <img src="assets/img/logo.png" width="50" height="70" alt="logo"> <span class="logoclass">E-Maynawa Sentosa</span> </a>
+				<a href="home.html" class="logo"> <img src="assets/img/logo.png" width="50" height="70" alt="logo"> <span class="logoclass">E-Maynawa</span> </a>
 				<a href="home.html" class="logo logo-small"> <img src="assets/img/logo.png" alt="Logo" width="30" height="30"> </a>
 			</div>
 			<a href="javascript:void(0);" id="toggle_btn"> <i class="fe fe-text-align-left"></i> </a>
