--- a/all-receive-lasalimu-selatan.html
+++ b/all-receive-lasalimu-selatan.html
@@ -96,7 +96,7 @@
 								<li><a href="all-receive-lasalimu-selatan.html"> Kecamatan Lasalimu Selatan</a></li>
 							</ul>
 						</li>
-						<li><a href="form-basic-inputs.html"><i class="fas fa-file-archive"></i> <span> Dokumen Penunjang </span> <span class="menu-arrow"></span></a>
+						<li><a href="form-basic-inputs.html"><i class="fas fa-file-archive"></i> <span> Dokumen <br>Penunjang </span> <span class="menu-arrow"></span></a>
 						</li>
 					</ul>
 				</div>
