--- a/form-basic-inputs.html
+++ b/form-basic-inputs.html
@@ -137,7 +137,7 @@
     </ul>
 </li>
 <li class="submenu">
-<li><a href="form-basic-inputs.html"><i class="fas fa-file-archive"></i> <span> Dokumen Penunjang </span> <span class="menu-arrow"></span></a>
+<li><a href="form-basic-inputs.html"><i class="fas fa-file-archive"></i> <span> Dokumen <br>Penunjang </span> <span class="menu-arrow"></span></a>
 </li>
 </ul>
 </div>
