--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			<div class="container">
 				<div class="loginbox bg-white">
 					<div class="login-left"> <img class="img-fluid" src="assets/img/logo.png" width="130" height="130" alt="Logo">
-					</br><p style="text-align: center; font-size: 20px; color:whitesmoke;">Sistem Pelayanan Terintegrasi Dokumen Pengawasan pada Inspektorat Daerah Baputarn Buton</p>
+					</br><p style="text-align: center; font-size: 20px; color:whitesmoke;">Sistem Pelayanan Terintegrasi Dokumen Pengawasan pada Inspektorat Daerah Kabupaten Buton</p>
 					</div>
 					<div class="login-right">
 						<div class="login-right-wrap">
